# SEC-filings-knowledge-copilot

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: critic.py  generator.py  graph.py  planner.py  retriever.py
backend/app/api/: __init__.py  admin.py  chat.py  documents.py  eval.py  feedback.py  search.py
backend/app/evaluation/: __init__.py  feedback.py  golden_dataset.py  judge.py  metrics.py
backend/app/ingestion/: chunker.py  enrichment.py  pipeline.py
backend/app/ingestion/parsers/: docx.py  htm.py  pdf.py  xlsx.py
backend/app/models/: chunks.py  documents.py  feedback.py  sessions.py
backend/app/storage/: embeddings.py  postgres.py  qdrant.py  search.py
evaluation/: golden_dataset.json  run_eval.py
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  ClaimGrounding.tsx  ConfidenceBadge.tsx  EvalDashboard.tsx  FeedbackWidget.tsx  MessageBubble.tsx  SourcePanel.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx
frontend/src/services/: api.ts
