[project]
name = "companywidekb"
version = "0.1.0"
description = "Enterprise Knowledge Copilot with Self-Correction & Evaluation"
requires-python = ">=3.11"
dependencies = [
    # LLM & Embeddings
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.4.0",

    # Document parsing
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Vector store
    "qdrant-client>=1.12.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",

    # Embeddings & reranking
    "sentence-transformers>=3.0.0",

    # Enrichment
    "scikit-learn>=1.5.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
ingest = "app.ingestion.pipeline:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
